# SemanticShelf

./: .env.example  .gitignore  README.md  SemanticShelf.txt  Technical_Doc.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  data_loader.py  embeddings.py  logging_utils.py  recommender.py  vector_store.py
