[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticshelf"
version = "0.1.0"
description = "Semantic book recommendation engine with Sentence Transformers, ChromaDB, and Streamlit."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "SemanticShelf Contributors" }]
dependencies = [
  "pandas>=2.2,<3",
  "sentence-transformers>=3.0,<4",
  "chromadb==0.6.3",
  "streamlit>=1.36,<2",
  "python-dotenv>=1.0,<2",
]

